# AnchenChat-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
app/: __init__.py  agent_graph.py  assistants.py  business_agents.py  business_router.py  config.py  main.py  memory_store.py  models.py  openai_client.py  rate_limit.py  sales_db.py  sales_intents.py  sales_intents_llm.py  sales_tools.py  search_tools.py  tavily_client.py
app/asr/: __init__.py  audio_normalize.py  factory.py  tencent.py
app/auth/: __init__.py  allowlist.py  codes.py  context.py  dependencies.py  errors.py  routes.py  sms.py  tokens.py  wechat.py
auth/: allowlist.example.yaml
evals/: cases.py  eval_anchen.py
nginx/: default.conf
tests/: test_agent_graph.py  test_audio_normalize.py  test_auth_allowlist.py  test_auth_codes.py  test_auth_routes.py  test_auth_sms_aliyun.py  test_auth_tokens.py  test_business_router.py  test_config.py  test_eval_cases.py  test_memory_store.py  test_models.py  test_openai_client.py  test_rate_limit.py  test_routes.py  test_sales_intents.py  test_sales_intents_llm.py  test_sales_tools.py  test_search_tools.py  test_tavily_client.py  test_tencent_asr.py  test_wechat_auth.py
