[project]
name = "doubao-chat-backend"
version = "0.1.0"
description = "FastAPI backend for a Doubao-style Android AI chat MVP"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "httpx>=0.28.1",
    "langgraph>=1.2.6",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.0",
    "pymssql>=2.3.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.0",
    "sse-starlette>=3.0.3",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
]
